--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div>
         <img src="ALLSTARS.gif" alt="Loading...">
-        <p>Loading, please wait...</p>
+        <p>allstars is loading, please wait...</p>
     </div>
     <script>
         const renderSiteUrl = 'https://allstars.onrender.com';
