--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             background-color: #000000;
-            font-family: Arial, sans-serif;
+            font-family: Futura;
             text-align: center;
         }
         img {
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div>
-        <img src="ALLSTARS.gif" alt="Loading...">
+        <img src="allstars.gif" alt="Loading...">
         <p>allstars is loading, please wait...</p>
     </div>
     <script>
