allstars gif replace

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div>
-        <img src="allstars1.gif" alt="Loading...">
+        <img src="allstars.gif" alt="Loading...">
         <p>allstars is loading, please wait...</p>
     </div>
     <script>
